# maskedise

./: CMakeLists.txt  README.md
eval/: CMakeLists.txt  cpucycles.h  measure_speed.c  test.c
include/: bike_rotr.h  core_ops.h  frodo_sampler.h  gadgets.h  haetae_sampler.h  hawk_sampler.h  masked.h  masked_cbd.h  masked_cmp.h  masked_fwsampling.h  masked_keccak.h  masked_poly_frommsg.h  masked_representations.h  randombytes.h
src/: bike_rotr.c  frodo_sampler.c  gadgets.c  haetae_sampler.c  hawk_sampler.c  masked_bin2tri.c  masked_cmp.c  masked_fisheryates.c  masked_i2c.c  masked_keccak.c  masked_poly_frommsg.c  masked_reject.c  masked_repand.c  masked_representations.c  masked_sorting.c  randombytes.c
